[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-auth"
version = "0.1.0"
description = "Identity and authentication service for pyfarm ecosystem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyfarm-core[storage]>=0.1.0",
    "pyfarm-config>=0.1.0",
    "fastapi>=0.103,<1.0",
    "uvicorn[standard]>=0.20,<0.21",
    "pydantic[email]>=2.0,<3.0",
    "pyjwt>=2.6,<2.7",
    "python-multipart>=0.0.5",
    "passlib[bcrypt]>=1.7,<2.0",
    # passlib 1.7.x cannot read bcrypt 4.x's version metadata, which breaks
    # hashing; pin bcrypt to the 3.x series until passlib is updated.
    "bcrypt>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.20,<1.0",
    "httpx>=0.23,<1.0",
    "black>=23.0,<24.0",
    "mypy>=1.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
